--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <main>
         <h2>Thank you for visiting!</h2>
 
-        <a href="https://www.facebook.com/photo.php?fbid=7220426261349186&set=pb.100001456506551.-2207520000&type=3" target="_blank">
-            <img src="photos.html" alt="Shanique Horgde-Monroe">
+        <a href="C:\Users\dmonr\Downloads\Thank You Image.jpg" target="_blank">
+            <img src="images" alt="Shanique Horgde-Monroe">
         </a>
         <h2>Important Links</h2>
         <a href="Shanique_About.html">About</a> | <a href="Shanique_Hobbies.html">Hobbies</a>
