--- a/Shanique_About.html
+++ b/Shanique_About.html
@@ -26,14 +26,14 @@
             to her commitment to continuous learning. Shanique is dedicated to her career and being a loving mother and a doting fiancée. Her role as the cornerstone of her family is evident in the values she upholds and the love she shares with her 
             close ones. 
         </p>
-        <a href="https://www.facebook.com/photo.php?fbid=7053761434682337&set=pb.100001456506551.-2207520000&type=3" target="_blank">
-            <img src="photos.html" alt="Baby Shower (Mom, Dad, Brother, Sisters)">
+        <a href="C:\Users\dmonr\Downloads\AboutMe2.jpg" target="_blank">
+            <img src="images" alt="Baby Shower (Mom, Dad, Brother, Sisters)">
         </a>
-        <a href="https://www.facebook.com/photo.php?fbid=7053761234682357&set=pb.100001456506551.-2207520000&type=3" target="_blank">
-            <img src="photos.html" alt="Baby Shower (Nieces, Nephews)">
+        <a href="C:\Users\dmonr\Downloads\AboutMe3.jpg" target="_blank">
+            <img src="images" alt="Baby Shower (Nieces, Nephews)">
         </a>
-        <a href="https://www.facebook.com/photo.php?fbid=4672864836105354&set=pb.100001456506551.-2207520000&type=3" target="_blank">
-            <img src="photos.html" alt="Graduation (Grandparents)">
+        <a href="C:\Users\dmonr\Downloads\AboutMe1.jpg" target="_blank">
+            <img src="images" alt="Graduation (Grandparents)">
         </a>
 
         <p>
