--- a/Shanique_Hobbies.html
+++ b/Shanique_Hobbies.html
@@ -30,14 +30,14 @@
             Amid her diverse hobbies, she cherishes the simplicity of sitting by the water, whether swimming or finding solace in the peaceful act of fishing. 
             Shanique proudly boasts about being a master fisherman, reflecting her dedication to the activities that bring her joy.
         </p>
-        <a href="https://www.facebook.com/photo.php?fbid=3117680248290495&set=pb.100001456506551.-2207520000&type=3" target="_blank">
-            <img src="photos.html" alt="Out on the Lake">
+        <a href="C:\Users\dmonr\Downloads\Hobbies2.jpg" target="_blank">
+            <img src="images" alt="Out on the Lake">
         </a>
-        <a href="https://www.facebook.com/photo.php?fbid=5231765133548652&set=pb.100001456506551.-2207520000&type=3" target="_blank">
-            <img src="photos.html" alt="St Croix (Aunt, Mom)">
+        <a href="C:\Users\dmonr\Downloads\Hobbies3.jpg" target="_blank">
+            <img src="images" alt="St Croix (Aunt, Mom)">
         </a>
-        <a href="https://www.facebook.com/photo.php?fbid=7053761334682347&set=pb.100001456506551.-2207520000&type=3" target="_blank">
-            <img src="photos.html" alt="Vacation (Best Friends)">
+        <a href="C:\Users\dmonr\Downloads\Hobbies1.jpg" target="_blank">
+            <img src="images" alt="Vacation (Best Friends)">
         </a>
         <p>
             If you're interested in learning more, feel free to visit my <a href="index.html">bioSite</a>.
