--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
     <main>
         <h2>Thank you for visiting!</h2>
 
-        <a href="C:\Users\dmonr\Downloads\Thank You Image.jpg" target="_blank">
-            <img src="images" alt="Shanique Horgde-Monroe">
+            <img src="C:\Users\dmonr\Downloads\Thank You Image.jpg" alt="Shanique Horgde-Monroe">
         </a>
         <h2>Important Links</h2>
         <a href="Shanique_About.html">About</a> | <a href="Shanique_Hobbies.html">Hobbies</a>
