--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <main>
         <h2>Thank you for visiting!</h2>
 
-            <img src="C:\Users\dmonr\Downloads\Thank You Image.jpg" alt="Shanique Horgde-Monroe">
+            <img src="C:\Users\dmonr\Downloads\Thank You Image.jpg" alt="Shanique Hordge-Monroe">
         
         <h2>Important Links</h2>
         <a href="Shanique_About.html">About</a> | <a href="Shanique_Hobbies.html">Hobbies</a>
