--- a/Shanique_Hobbies.html
+++ b/Shanique_Hobbies.html
@@ -24,7 +24,7 @@
     <main>
         <h2>Shanique's Hobbies</h2>
         <p>
-            Shanique Hordge is a devoted individual who finds immense joy in her relationships with family and friends. 
+            Shanique Hordge-Monroe is a devoted individual who finds immense joy in her relationships with family and friends. 
             Her love for them is unwavering; she often celebrates life's moments and provides steadfast support in every aspect of their lives. 
             Beyond her close connections, Shanique is passionate about travel, exploring numerous clan-destined locales during her scheduled vacations. 
             Amid her diverse hobbies, she cherishes the simplicity of sitting by the water, whether swimming or finding solace in the peaceful act of fishing. 
