--- a/index.html
+++ b/index.html
@@ -22,8 +22,11 @@
 
     <main>
         <h2>Thank you for visiting!</h2>
-
-            <img src="C:\Users\dmonr\Downloads\Thank You Image.jpg" alt="Shanique Hordge-Monroe">
+        
+    </div>
+        <div id="container">
+            <div class="grid1">
+            <div id="main-photo"><img src="C:\Users\dmonr\Downloads\Thank You Image.jpg" alt="Shanique Hordge-Monroe"></div>
         
         <h2>Important Links</h2>
         <a href="Shanique_About.html">About</a> | <a href="Shanique_Hobbies.html">Hobbies</a>
