--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
     </div>
         <div id="container">
             <div class="grid1">
-            <div id="main-photo"><img src="C:\Users\dmonr\Downloads\Thank You Image.jpg" alt="Shanique Hordge-Monroe"></div>
+            <div id="main-photo"><img src="C:\Users\dmonr\Downloads\Thank You Image.jpg" alt="Shanique Hordge-Monroe">
+    </div>
         
         <h2>Important Links</h2>
         <a href="Shanique_About.html">About</a> | <a href="Shanique_Hobbies.html">Hobbies</a>
