--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
         <div id="container">
             <div class="grid1">
-            <div id="main-photo"><img src="C:\Users\dmonr\Downloads\Thank You Image.jpg" alt="Shanique Hordge-Monroe">
+            <div id="main-photo"><img src="images\Thank You Image.jpg" alt="Shanique Hordge-Monroe">
     </div>
         
 <footer>
