--- a/Shanique_About.html
+++ b/Shanique_About.html
@@ -30,9 +30,9 @@
         
         <div id="container">
             <div class="grid2">
-            <div class="photo"><img src="C:\Users\dmonr\Downloads\AboutMe2.jpg" alt="Baby Shower (Mom, Dad, Brother, Sisters)">
-            <div class="photo"><img src="C:\Users\dmonr\Downloads\AboutMe3.jpg" alt="Baby Shower (Nieces, Nephews)">
-            <div class="photo"><img src="C:\Users\dmonr\Downloads\AboutMe1.jpg" alt="Graduation (Grandparents)">
+            <div class="photo"><img src="images\AboutMe2.jpg" alt="Baby Shower (Mom, Dad, Brother, Sisters)">
+            <div class="photo"><img src="images\AboutMe3.jpg" alt="Baby Shower (Nieces, Nephews)">
+            <div class="photo"><img src="images\AboutMe1.jpg" alt="Graduation (Grandparents)">
         </div>
         
         <p>
