--- a/Shanique_Hobbies.html
+++ b/Shanique_Hobbies.html
@@ -33,9 +33,9 @@
         
         <div id="container">
             <div class="grid2">
-            <div class="photo"><img src="C:\Users\dmonr\Downloads\Hobbies2.jpg" alt="Out on the Lake">
-            <div class="photo"><img src="C:\Users\dmonr\Downloads\Hobbies3.jpg" alt="St Croix (Aunt, Mom)">
-            div class="photo"><img src="C:\Users\dmonr\Downloads\Hobbies1.jpg" alt="Vacation (Best Friends)">
+            <div class="photo"><img src="images\Hobbies2.jpg" alt="Out on the Lake">
+            <div class="photo"><img src="images\Hobbies3.jpg" alt="St Croix (Aunt, Mom)">
+            div class="photo"><img src="images\Hobbies1.jpg" alt="Vacation (Best Friends)">
         </div>
         
         <p>
