--- a/Shanique_Hobbies.html
+++ b/Shanique_Hobbies.html
@@ -35,7 +35,7 @@
             <div class="grid2">
             <div class="photo"><img src="images\Hobbies2.jpg" alt="Out on the Lake">
             <div class="photo"><img src="images\Hobbies3.jpg" alt="St Croix (Aunt, Mom)">
-            div class="photo"><img src="images\Hobbies1.jpg" alt="Vacation (Best Friends)">
+            <div class="photo"><img src="images\Hobbies1.jpg" alt="Vacation (Best Friends)">
         </div>
         
         <p>
