--- a/Shanique_Hobbies.html
+++ b/Shanique_Hobbies.html
@@ -44,7 +44,7 @@
     </main>
 
     <footer>
-        <p>I would like to personally thank you for taking the time to view this site. </p>
+        <p>Thank you for taking the time to view this site. </p>
     </footer>
 </body>
 
